[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/landscape.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/PilotCommandCondensedItalic-p7691.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/SubmitScore.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/Submitbtn.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 19
outline_size = 3
outline_color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
font_data = ExtResource( 2 )

[node name="DeathScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 534, 226 )
texture = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 328.0
margin_top = 120.0
margin_right = 680.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
max_length = 10
placeholder_text = "Name..."

[node name="Submit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.857
anchor_bottom = 0.5
margin_left = 408.0
margin_top = 200.0
margin_right = 1274.0
margin_bottom = 522.0
rect_scale = Vector2( 0.25, 0.25 )
icon = ExtResource( 4 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 320.0
margin_top = 24.0
margin_right = 672.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "Score:"

[node name="MainMenu" type="Button" parent="."]
margin_top = 120.0
margin_right = 128.0
margin_bottom = 184.0
text = "Main Menu"

[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
